--- a/openkore-ai/ai-service/requirements.txt
+++ b/openkore-ai/ai-service/requirements.txt
@@ -1,30 +1,32 @@
+# CrewAI - Install first to manage dependencies
+crewai>=1.9.3
+
 # HTTP Server
-fastapi==0.109.0
-uvicorn[standard]==0.27.0
-pydantic==2.5.3
+fastapi>=0.128.2
+uvicorn[standard]>=0.40.0
 
 # Database
-aiosqlite==0.19.0
+# Note: Using ~=0.21.0 for compatibility with crewai 1.9.3 (requires aiosqlite~=0.21.0)
+aiosqlite~=0.21.0
 
 # LLM Providers
-openai==1.10.0
-anthropic==0.9.0
-httpx==0.26.0
+# Note: Using openai~=1.83.0 for compatibility with crewai 1.9.3
+anthropic>=0.78.0
+openai~=1.83.0
+httpx>=0.28.1
 
-# OpenMemory SDK
-openmemory==0.2.1
-
-# CrewAI
-crewai==0.11.0
-langchain==0.1.4
-langchain-openai==0.0.4
+# OpenMemory SDK (using synthetic embeddings)
+openmemory-py>=1.3.2
 
 # ML & Data
-numpy==1.26.3
-scikit-learn==1.4.0
-onnxruntime==1.16.3
+numpy>=1.26.4,<3.0.0  # Compatible with scikit-learn
+scikit-learn>=1.8.0
+onnxruntime
 
 # Utilities
-pyyaml==6.0.1
-python-dotenv==1.0.0
-loguru==0.7.2
+pyyaml>=6.0.3
+loguru>=0.7.3
+# Note: Using python-dotenv~=1.1.1 for compatibility with crewai 1.9.3
+python-dotenv~=1.1.1
+# Note: Using pydantic~=2.11.9 for compatibility with crewai 1.9.3
+pydantic~=2.11.9
