feat: Introduce AI autonomous world services, machine learning inference, new game content, and supporting infrastructure with comprehensive tests and documentation.

--- a/openkore-ai/ai-engine/CMakeLists.txt
+++ b/openkore-ai/ai-engine/CMakeLists.txt
@@ -49,6 +49,7 @@ FetchContent_MakeAvailable(json)
 # Source files
 file(GLOB_RECURSE SOURCES
     "src/main.cpp"
+    "src/logger.cpp"
     "src/decision/*.cpp"
     "src/coordinators/*.cpp"
 )
