--- a/openkore-ai/ai-service/.env.example
+++ b/openkore-ai/ai-service/.env.example
@@ -233,10 +233,10 @@ MACRO_HOTRELOAD_PORT=8765
 #
 # ════════════════════════════════════════════════════════════════════════
 # 🎉 Once configured properly, your bot will:
-#    ✓ Auto-heal when HP drops
-#    ✓ Emergency teleport from danger
-#    ✓ Allocate stats automatically
-#    ✓ Learn skills intelligently
-#    ✓ Manage equipment adaptively
-#    ✓ Farm autonomously at 95% autonomy
+#     Auto-heal when HP drops
+#     Emergency teleport from danger
+#     Allocate stats automatically
+#     Learn skills intelligently
+#     Manage equipment adaptively
+#     Farm autonomously at 95% autonomy
 # ════════════════════════════════════════════════════════════════════════
