--- a/openkore-ai/ai-service/.env
+++ b/openkore-ai/ai-service/.env
@@ -1,5 +1,6 @@
 # DeepSeek API Configuration
-DEEPSEEK_API_KEY=sk-362a85e2d7764f89b8ab2d8a9b8873f4
+DEEPSEEK_API_KEY=sk-
+DATABASE_URL=sqlite:///data/openkore_ai.db
 
 # Optional: OpenAI API Key (fallback)
 # OPENAI_API_KEY=your_openai_key_here
